# SquareHead

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeOptions.txt  QtAdditional.cmake  QtAdditional_template.in  Version.h.in
data/: SquareHead.xcf  squarehead  squarehead.desktop  squarehead_en_US.ts  squarehead_ru_RU.ts  squarehead_snap.desktop
data/pixmaps/: squarehead.xpm
scripts/: make_MSVS2015.bat  make_MSVS2015_64.bat  make_MSVS2017.bat  make_MSVS2017_64.bat
snap/: snapcraft.yaml
src/: Field.cpp  Field.h  FieldView.cpp  FieldView.h  Game.cpp  Game.h  GameLogger.cpp  GameLogger.h  GlobalOptions.cpp  GlobalOptions.h  main.cpp
src/Player/: Player.cpp  Player.h  PlayerAIEasy.cpp  PlayerAIEasy.h  PlayerAIHard.cpp  PlayerAIHard.h  PlayerAIMedium.cpp  PlayerAIMedium.h  PlayerAIVeryEasy.cpp  PlayerAIVeryEasy.h  PlayerAIVeryHard.cpp  PlayerAIVeryHard.h  PlayerHuman.cpp  PlayerHuman.h
src/UI/: MainWindow.cpp  MainWindow.h  MainWindow.ui  OptionsDialog.cpp  OptionsDialog.h  OptionsDialog.ui
